--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <button width='200' height='30' ><a href="/homePage/index.html" style="text-decoration: none; color: black;">Home Page</a></button>
+    <button width='200' height='30' ><a href="https://jorgealcazarrochin.github.io/homePage/index.html" style="text-decoration: none; color: black;">Home Page</a></button>
     <div class="eyes">
 
       <div class="eye">
